--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,5 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"]
+  "@typescript-eslint/no-explicit-any":false,
+  "@typescript-eslint/no-unused-vars": false,
 }
