--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,8 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"],
-  "@typescript-eslint/no-explicit-any":false,
-  "@typescript-eslint/no-unused-vars": false,
+  "extends": [
+    "next/core-web-vitals",
+    "next/typescript"
+  ],
+  "@typescript-eslint/no-explicit-any": false,
+  "@typescript-eslint/no-unused-vars": false
 }
